<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/select"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:minWidth="300dp"
            android:layout_width="wrap_content" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_weight="1"
            android:entries="@array/NewsSources"/>

    </LinearLayout>

    <Button
        android:text="@string/getnews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/getNews"
        android:minWidth="75dp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@android:drawable/screen_background_light_transparent"
        android:id="@+id/imageView"
        android:minHeight="150dp"
        android:maxHeight="150dp"
        android:minWidth="175dp"
        android:maxWidth="175dp"
        android:padding="10dp"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="225dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/scrollLayout" >

            <TextView
                android:text="@string/aaa"
                android:textSize="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textStyle="normal|bold" />

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/author"
                tools:text="@string/aaa" />

            <TextView
                android:text="@string/aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/publishedOn"
                tools:text="@string/aaa" />

            <TextView
                android:text="@string/empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/empty" />

            <TextView
                android:text="@string/aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descrption" />

            <TextView
                android:text="@string/aaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/first"
            android:id="@+id/imageButton"
            android:layout_weight="1"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/previous"
            android:id="@+id/imageButton2"
            android:layout_weight="1"
            android:scaleType="fitXY"/>

        <Button
            android:text="@string/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:minWidth="200dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/next"
            android:id="@+id/imageButton3"
            android:layout_weight="1"
            android:scaleType="fitXY"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/last"
            android:id="@+id/imageButton4"
            android:layout_weight="1"
            android:scaleType="fitXY"/>

    </LinearLayout>
</LinearLayout>